--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -32,7 +32,8 @@
         "TokenKey": "super secret unguessable key",
         "twilio_accountSid": "no test environment available",
         "twilio_apiKeySecret": "no test environment available",
-        "twilio_apiKeySid": "no test environment available"
+        "twilio_apiKeySid": "no test environment available",
+        "Firebase_Storage_Bucket": "learning-management-hackathon.appspot.com"
       }
     },
     "IIS Express": {
