--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "bundle-report": "webpack-bundle-analyzer ../API/wwwroot/stats.json",
     "test": "ng test"
   },
   "private": true,
@@ -47,6 +48,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "webpack-bundle-analyzer": "^4.7.0"
   }
 }
